--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
+    "axios": "^1.2.3",
     "babel-plugin-styled-components": "^2.0.7",
     "gatsby": "^5.4.2",
     "gatsby-plugin-image": "^3.4.0",
